--- a/src/layout/Header/style.scss
+++ b/src/layout/Header/style.scss
@@ -1,9 +1,8 @@
 header {
   width: 100%;
-  height: 12vh;
   background-color: #0f0f0f;
   display: flex;
-  padding: 10px;
+  padding:  25px 10px 10px 10px;
   justify-content: space-between;
   align-items: center;
   position: relative;
@@ -579,7 +578,6 @@ header {
 
 @media (max-width:1400px) {
   header {
-    padding: 0;
 
     .basket_items_count {
       width: 23px;
