--- a/src/components/PChannel/style.scss
+++ b/src/components/PChannel/style.scss
@@ -65,7 +65,7 @@
       line-height: 28px;
       /* 140% */
 
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
     }
@@ -79,7 +79,7 @@
       line-height: 24px;
       height: 90px;
       overflow-x: scroll;
-    overflow-x: hidden;
+      overflow-x: hidden;
     }
 
     span {
@@ -131,6 +131,33 @@
       background-color: transparent;
       border: 1px solid var(--Text-11, #23272E);
       color: var(--Text-4, #A2A8B7);
+    }
+  }
+}
+
+@media(max-width:576px) {
+  .channelCard {
+    .channelCard-context {
+      .subs-button {
+        padding: 10px 16px;
+        font-size: 14px;
+        min-width: 130px;
+      }
+
+      .avatar-group {
+        .avatar {
+          width: 40px;
+          height: 40px;
+        }
+      }
+
+      .username {
+        font-size: 14px;
+      }
+
+      span {
+        font-size: 14px;
+      }
     }
   }
 }
