--- a/src/components/VideoCard/style.scss
+++ b/src/components/VideoCard/style.scss
@@ -134,7 +134,7 @@
       opacity: 1;
     }
 
-    
+
   }
 
   .heading {
@@ -144,7 +144,7 @@
     align-items: center;
     padding: 0 16px;
 
-    h1 {
+    .user_name {
       color: var(--Text-3, #c5c9d3);
       margin: 0;
       font-family: Poppins;
@@ -261,5 +261,16 @@
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media(max-width:576px) {
+  .videoCard {
+    .main {
+      .card_price {
+        font-size: 14px;
+        padding: 3px 6px;
+      }
+    }
   }
 }
