--- a/src/pages/ChannelsDetail/components/Categories/style.scss
+++ b/src/pages/ChannelsDetail/components/Categories/style.scss
@@ -37,3 +37,11 @@
         }
     }
 }
+@media(max-width:576px){
+    .channels_categories {
+        a{
+            font-size: 15px;
+            padding: 10px 20px;
+        }
+    }
+}
