--- a/src/pages/Home/components/Channels/style.scss
+++ b/src/pages/Home/components/Channels/style.scss
@@ -3,24 +3,51 @@
   height: auto;
   padding: 12px 0;
 
-  // padding-top: 30px;
-  h4 {
-    color: #fff;
-    /* Poppins/28/Medium */
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px; /* 128.571% */
+  .section__title {
+    margin-bottom: 15px;
+
+    // padding-top: 30px;
+    h4 {
+      color: #fff;
+      /* Poppins/28/Medium */
+      font-family: Poppins;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 36px;
+      /* 128.571% */
+
+    }
   }
-  a {
-    color: #f6f3f4 ;
-    /* Poppins/16/SemiBold */
-    font-family: Poppins;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 150% */
-    text-decoration: none;
+    a {
+      color: #f6f3f4;
+      /* Poppins/16/SemiBold */
+      font-family: Poppins;
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      /* 150% */
+      text-decoration: none;
+    }
+ 
+}
+
+@media(max-width:576px) {
+  .channels {
+    .swiper{
+      padding: 0;
+    }
+    .section__title {
+      margin-bottom: 5px;
+
+      h4 {
+        font-size: 16px;
+        font-style: normal;
+        line-height: 30px;
+        /* 128.571% */
+      }
+    }
   }
+
 }
