--- a/src/pages/Home/components/TopVideos/style.scss
+++ b/src/pages/Home/components/TopVideos/style.scss
@@ -1,27 +1,48 @@
 .topVideos {
-    width: 100%;
-    height: auto;
-    padding: 12px 0;
+  width: 100%;
+  height: auto;
+  padding: 12px 0;
+
+  .section__title {
+    margin-bottom: 15px;
 
     h4 {
-        color: #fff;
-        /* Poppins/28/Medium */
-        font-family: Poppins;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 36px; /* 128.571% */
-      }
-      a {
-        color: #f6f3f4;
-    
-        /* Poppins/16/SemiBold */
-        font-family: Poppins;
-        font-size: 13px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 24px; /* 150% */
-        text-decoration: none;
+      color: #fff;
+      /* Poppins/28/Medium */
+      font-family: Poppins;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 36px;
+      /* 128.571% */
+    }
+  }
+
+  a {
+    color: #f6f3f4;
+
+    /* Poppins/16/SemiBold */
+    font-family: Poppins;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+    text-decoration: none;
+  }
+}
+
+@media(max-width:576px) {
+
+  .topVideos {
+
+    .section__title {
+      margin-bottom: 5px;
+
+      h4 {
+        font-size: 16px;
+        line-height: 30px;
       }
     }
-    
+  }
+}
