--- a/src/pages/Profile/pages/About/style.scss
+++ b/src/pages/Profile/pages/About/style.scss
@@ -29,15 +29,15 @@
     }
 
     .my_about_info {
-        h5 {
-            color: var(--Text-1, #F3F4F6);
-            /* Poppins/20/Medium */
+        h1 {
+            color: #FFF;
+            /* Poppins/28/Medium */
             font-family: Poppins;
-            font-size: 20px;
+            font-size: 28px;
             font-style: normal;
             font-weight: 400;
-            line-height: 28px;
-            /* 140% */
+            line-height: 36px;
+            /* 128.571% */
         }
 
         span {
@@ -47,6 +47,15 @@
             font-weight: 400;
             line-height: 24px;
             /* 150% */
+        }
+    }
+}
+@media(max-width:576px){
+    .my_about_profile {
+        .my_about_info {
+        h1{
+            font-size: 18px;
+        }
         }
     }
 }
