--- a/src/pages/Profile/pages/LikedVideos/style.scss
+++ b/src/pages/Profile/pages/LikedVideos/style.scss
@@ -65,3 +65,10 @@
 
     
 }
+@media(max-width:576px){
+    .liked_videos_profile {
+      
+        h1 {
+            font-size: 18px;
+        }}
+}
