--- a/src/pages/Subscriptions/style.scss
+++ b/src/pages/Subscriptions/style.scss
@@ -2,7 +2,9 @@
   width: 100%;
   height: auto;
   padding: 10px;
-
+.section_title{
+  padding: 15px 0;
+}
   .channelCard {
     .channelCard-context {
       h2 {
@@ -66,8 +68,12 @@
 
 @media (max-width:540px) {
   .subscription {
+    .section_title{
+      padding: 5px 0;
+    }
     h4{
-      font-size: 20px;
+      font-size: 16px;
+      line-height: 20px;
     }
     .custom-select{
       .ant-select{
