--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -4,6 +4,9 @@
 //   z-index: 0 !important;
  
 // }
+.section_title{
+  padding: 15px 0;
+}
 .page__top{
   justify-content: space-between;
 
@@ -262,9 +265,15 @@
 
 
 @media (max-width:540px) {
+  .section_title{
+    padding: 5px 0;
+  }
     .top_page_videos {
       h1{
         font-size: 25px;
+      }
+      h4{
+        font-size: 18px;
       }
       .custom-select{
         .ant-select{
@@ -279,7 +288,7 @@
       .right_tools{
         flex-wrap: wrap;
         .add__video, .sort_btn{
-          padding: 12px 20px;
+          padding: 10px 18px;
           span{
             display: none;
           }
