--- a/src/pages/Trending/style.scss
+++ b/src/pages/Trending/style.scss
@@ -74,11 +74,17 @@
 
 
 
-
+.section_title{
+  padding: 15px 0;
+}
 @media (max-width:540px) {
+  .section_title{
+    padding: 5px 0;
+  }
   .trending_videos {
+    
     h4 {
-      font-size: 25px;
+      font-size: 18px;
     }
 
     .custom-select {
