--- a/src/components/VideoCard/style.scss
+++ b/src/components/VideoCard/style.scss
@@ -1,6 +1,6 @@
 .videoCard {
   display: flex;
-  height: 370px;
+  min-height: 370px;
   width: 100%;
   position: relative;
   // padding: 10px 16px;
