--- a/src/pages/UploadVideo/style.scss
+++ b/src/pages/UploadVideo/style.scss
@@ -202,6 +202,7 @@
 
       .show__border {
         border: 1px dashed #707070;
+        transition: all .5s ease-in-out;
       }
 
       input {
@@ -231,6 +232,7 @@
       .show__border:hover {
         color: #0C95D9;
         border-color: #0C95D9;
+        box-shadow: 0 0 3px 1px #0C95D9;
 
       }
 
