--- a/src/components/PChannel/style.scss
+++ b/src/components/PChannel/style.scss
@@ -52,10 +52,10 @@
     bottom: -20%;
     width: 100%;
     padding: 10px;
-    transition: 0.5s;
+    transition: all 0.5s ease-in-out;
 
     .username {
-      color: var(--Text-1, #f3f4f6);
+      color: var(--textColor);
 
       /* Poppins/20/SemiBold */
       font-family: Poppins;
@@ -71,7 +71,8 @@
     }
 
     p {
-      color: var(--Text-4, #a2a8b7);
+      color: var(--textColor);
+      opacity: .8;
       font-family: Poppins;
       font-size: 16px;
       font-style: normal;
@@ -83,8 +84,9 @@
     }
 
     span {
-      color: var(--Text-3, #C5C9D3);
-      font-size: 16px;
+      color: var(--textColor);
+      opacity: .5;     
+       font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: 24px;
@@ -101,7 +103,7 @@
         height: 50px;
         border-radius: 50%;
         overflow: hidden;
-        border: 2px solid #0f0f0f;
+        border: 2px solid var(--backgroundColor);
         margin-right: -20px;
 
         img {
