--- a/src/layout/Header/components/Search/style.scss
+++ b/src/layout/Header/components/Search/style.scss
@@ -5,6 +5,8 @@ header {
     width: 100% !important;
     max-width: 500px;
     margin-right: 15px;
+    background: var(--primaryColor);
+    border-radius: 16px;
   }
 
   .search {
@@ -73,10 +75,10 @@ header {
   .search_result_content {
     width: 100%;
     border-radius: 16px;
-    background: var(--Background-Color, #0f0f0f);
+    background: var(--backgroundColor);
 
     .not_found_result {
-      color: white;
+      color: var(--textColor);
       font-size: 14px;
       font-weight: 400;
     }
@@ -85,7 +87,7 @@ header {
       display: block;
       border-radius: 12px;
       padding: 12px 24px;
-      color: var(--Text-2, #d1d4db);
+      color: var(--textColor);;
       font-family: Poppins;
       font-size: 14px;
       font-style: normal;
@@ -93,7 +95,7 @@ header {
       line-height: 22px;
 
       &:hover {
-        background-color: #23272e;
+        background: var(--primaryColor);
       }
     }
   }
@@ -102,6 +104,7 @@ header {
 .microphone {
   border-radius: 16px;
   border: 1px solid var(--Gray-400, #292929);
+  background: var(--primaryColor);
   display: flex;
   width: 42px;
   padding: 12px;
@@ -111,7 +114,6 @@ header {
   position: absolute;
   cursor: pointer;
   z-index: 9999;
-  background-color: transparent;
   outline: none;
   height: 100%;
   right: 0;
@@ -134,6 +136,8 @@ header {
     z-index: 55555;
     width: 45%;
     margin-left: auto;
+    background: var(--primaryColor);
+    border-radius: 16px;
 
     .search {
       border-radius: 16px;
@@ -184,7 +188,7 @@ header {
 }
 
 .listening-modal {
-  background-color: #1b1d23;
+  background-color: var(--primaryColor);
   padding: 20px 30px;
   position: fixed;
   z-index: 99999;
@@ -197,7 +201,7 @@ header {
 
   .modal-title {
     font-size: 20px;
-    color: #fff;
+    color: var(--textColor);
     font-weight: 500;
     margin-top: 20px;
   }
@@ -208,7 +212,7 @@ header {
     top: 20px;
     cursor: pointer;
     font-size: 30px;
-    color: #fff;
+    color: var(--textColor);
     padding: 3px;
     border-radius: 50%;
     transition: .3s ease;
