--- a/src/layout/Sidebar/style.scss
+++ b/src/layout/Sidebar/style.scss
@@ -2,7 +2,7 @@
   // display: flex;
   // Sidebar Menu
   .sidebar {
-    background: #0f0f0f;
+    background: var(--backgroundColor);
     color: #fff;
     height: 100vh;
     transition: all 0.5s ease;
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    border-right: 1px solid var(--Gray-400, #292929);
+    border-right: 1px solid #292929;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -77,7 +77,7 @@
           width: 90%;
           height: 40px;
           padding: 12px 24px;
-          color: var(--Text-4, #a2a8b7);
+          color: #a2a8b7;
           font-family: Poppins;
           font-size: 16px;
           font-style: normal;
@@ -122,13 +122,13 @@
       margin: 5px 0;
       transition: all 0.3s ease;
       &:hover {
-        background: var(--Gray-400, #292929);
+        background: var(--primaryColor);
         span {
-          color: #fff !important;
+          color: var(--textColor) !important;
         }
       }
       span {
-        color: var(--Text-4, #a2a8b7);
+        color: #a2a8b7;
         /* Poppins/16/SemiBold */
         font-family: Poppins;
         font-size: 16px;
@@ -139,6 +139,7 @@
     }
   }
 }
+
 
 // Sidebar footer
 .footer {
@@ -183,9 +184,9 @@
   .active {
     width: 100%;
     background: #0385ca !important;
-    color: #fff !important;
+    color: var(--textColor) !important;
     span {
-      color: #fff !important;
+      color: var(--textColor) !important;
     }
   }
 }
