--- a/src/pages/TopVideos/style.scss
+++ b/src/pages/TopVideos/style.scss
@@ -26,7 +26,7 @@
 .modal__body{
   .ant-modal-content{
     border: 1px solid var(--Gray-400, #292929);
-    background: var(--Background-Color, #0F0F0F);
+    background: var(--backgroundColor);
     color: #fff;
     padding-top: 55px;
     .modal__btns{
