--- a/src/pages/UploadVideo/style.scss
+++ b/src/pages/UploadVideo/style.scss
@@ -3,6 +3,9 @@
   height: auto;
   padding: 12px 0;
 
+  #original_video{
+    z-index: 999;
+  }
   #preview_video {
     position: absolute;
     top: 0;
@@ -77,7 +80,7 @@
     .upload__steps {
       position: relative;
       z-index: -2;
-      background: #121216;
+      background: var(--primaryColor);
       border-radius: 20px;
       margin: 0 0 20px 0;
       padding: 17px 60px;
@@ -104,6 +107,7 @@
 
           h3 {
             font-size: 14px;
+            color: var(--textColor);
           }
         }
 
@@ -130,7 +134,7 @@
     .select_video {
       width: 100%;
       padding: 48px 42px;
-      background: #121216;
+      background: var(--primaryColor);
       border-radius: 20px;
 
       &>div {
@@ -164,18 +168,19 @@
 
           h6 {
             font: 16px Poppins;
-            color: #fff;
+            color: var(--textColor);
             text-transform: capitalize;
           }
 
           svg {
-            color: #f5f5f5;
+            color: var(--textColor) ;
             margin: 0 5px 0 0;
           }
 
           p {
             font: 12px Poppins;
-            color: #f5f5f5;
+            color: var(--textColor);
+            opacity: .8;
             text-align: left;
             display: flex;
             align-items: center;
@@ -217,7 +222,8 @@
 
       .upload__desc {
         h4 {
-          color: #fff;
+          color: var(--textColor);
+          opacity: .8;
           font: 700 clamp(22px, 3vw, 32px) Poppins;
           text-align: center;
         }
@@ -272,7 +278,7 @@
     .select_form {
       flex: 1;
       padding: 17px;
-      background: #121216;
+      background: var(--primaryColor);
       border-radius: 20px;
       width: 70%;
 
@@ -306,10 +312,9 @@
           background-color: transparent;
           padding: 12px 0;
           outline: none;
-          color: var(--Text-10, #353a45);
+          color: var(--textColor);
 
-          color: var(--Text-1, #f3f4f6);
-
+        
           /* Poppins/16/Medium */
           font-family: Poppins;
           font-size: 16px;
@@ -328,7 +333,7 @@
           outline: none;
           padding: 12px 0;
 
-          color: var(--Text-1, #f3f4f6);
+          color: var(--textColor);
 
           /* Poppins/16/Medium */
           font-family: Poppins;
@@ -402,7 +407,7 @@
           border: 1px solid var(--Text-11, #23272e);
 
           .countryCurrencySymbol {
-            color: #fff;
+            color: var(--textColor);
           }
 
           input[type="number"] {
@@ -410,9 +415,8 @@
             background-color: transparent;
             border: none;
             width: 100%;
-            color: var(--Text-10, #353a45);
             direction: 'ltr';
-            color: var(--Text-1, #f3f4f6);
+            color: var(--textColor);
 
             /* Poppins/16/Medium */
             font-family: Poppins;
@@ -473,11 +477,11 @@
           border: 1px solid #0087cc8f !important;
           padding: 5px 15px !important;
           font: 14px Poppins !important;
-          background-color: #1b1c21 !important;
-          color: #e7e7e7 !important;
+          background-color: var(--primaryColor) !important;
+          color: var(--textColor) !important;
 
           &::placeholder {
-            color: #e7e7e7;
+            color: var(--textColor) !important;
           }
         }
 
@@ -493,14 +497,14 @@
 
         .suggestions-wrapper {
           position: absolute;
-          color: #fff;
+          color: var(--textColor);
           top: 45px;
 
           ul {
             padding: 8px 15px;
             border: 1px solid #0087cc8f;
             border-radius: 20px;
-            background: #121216;
+            background: var(--backgroundColor);
             max-height: 150px;
             overflow: auto;
           }
@@ -518,7 +522,7 @@
             margin: 0 0 3px 0;
 
             &:hover {
-              background: #1b1c21 0% 0% no-repeat padding-box;
+              background: var(--primaryColor) 0% 0% no-repeat padding-box;
             }
           }
         }
@@ -635,7 +639,7 @@
     position: relative;
     width: 20px;
     height: 20px;
-    background: #121216;
+    background: #ccc;
     border: 1px solid #fff;
     border-radius: 50%;
     z-index: 9;
@@ -654,6 +658,7 @@
   p {
     text-transform: capitalize;
     font: 500 14px Poppins;
+    color: var(--textColor);
   }
 
   .thumbernails__wrapper {
@@ -750,7 +755,7 @@
       padding: 5px 15px !important;
       font: 14px Poppins !important;
       background: transparent;
-      color: #fff;
+      color: var(--textColor);
       outline: 0;
       margin: 0 5px;
       border-radius: 16px;
